<resources>
    <string name="app_name">mobile-hw2</string>
    <string name="title_map">Map</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_settings">Settings</string>

    <!-- Preference -->
    <string name="dark_mode_title">Dark Mode</string>
    <string name="dark_mode_summary">Toggle Dark Mode</string>
    <string name="delete_data_title">Delete Data</string>
    <string name="delete_data_summary">Delete App Data From Phone</string>
    <string name="delete_data_confirm">Are you sure you want to delete app data?</string>
    <string name="longitude">longitude:</string>
    <string name="latitude">latitude:</string>

    <!-- mapbox -->
    <string name="mapbox_access_token">pk.eyJ1IjoidGh1bmRlcmphdyIsImEiOiJja282OXh4ZTMyMTJwMnBtdnAxNXJxcDZkIn0.C6B0WI6X-3aDaus7HIwz1A</string>
    <string name="user_location_permission_not_granted">Location Permission not grandted!</string>
    <string name="user_location_permission_explanation">We need your location to show it on map</string>
</resources>