<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/location_image"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/bookmark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:text="title"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/location_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_cons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmark_title"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/latitude"
        app:layout_constraintLeft_toRightOf="@id/location_image"
        app:layout_constraintTop_toBottomOf="@id/bookmark_title" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmark_title"
        android:layout_alignBottom="@id/latitude_cons"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:text="5.1"
        app:layout_constraintLeft_toRightOf="@id/latitude_cons"
        app:layout_constraintTop_toBottomOf="@id/bookmark_title" />

    <TextView
        android:id="@+id/longitude_cons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmark_title"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/latitude"
        android:text="@string/longitude"
        app:layout_constraintLeft_toRightOf="@id/latitude"
        app:layout_constraintTop_toBottomOf="@id/bookmark_title" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmark_title"
        android:layout_alignTop="@id/longitude_cons"
        android:layout_alignBottom="@id/longitude_cons"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="5dp"
        android:text="5.1"
        app:layout_constraintLeft_toRightOf="@id/longitude_cons"
        app:layout_constraintTop_toBottomOf="@id/bookmark_title" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@android:color/transparent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="delete bookmark"
        app:srcCompat="@drawable/ic_baseline_delete_24" />


</androidx.constraintlayout.widget.ConstraintLayout>